# PyCompareC

./: LICENSE  README.md  pyproject.toml
src/PyCompareC/: CompareC.py  survivalC.py
tests/: testC.py
